# cortex

./: .gitignore  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Changes  Custom_options.opt  LICENSE  PULL_REQUEST_TEMPLATE.md  README.asciidoc  README.md  SConstruct  SConstruct.ie  SConstruct.ieOps  appveyor.yml  azure-pipelines.yml  bashSetup.sh  t.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature.md
.github/workflows/: main.yml
.svn/: all-wcprops  dir-prop-base  entries
.svn/text-base/: Changes.svn-base  SConstruct.svn-base
.svn/tmp/: Changes.tmp  SConstruct.2.tmp  SConstruct.3.tmp  SConstruct.4.tmp  SConstruct.5.tmp  SConstruct.6.tmp  SConstruct.8.tmp  SConstruct.9.tmp  SConstruct.tmp
config/: installDependencies.py  options.ie
config/.svn/: all-wcprops  entries
config/appveyor/: setAppveyorVersion.py
config/azure/: build.yaml  options.linux  options.macos  options.windows  setBuildVars.py  setVersionVariables.py
config/bb/: Custom_options.opt
config/ie/: buildAll  ieCoreImageSetup.py  ieCoreSceneSetup.py  ieMayaSetup.py  installOps  installTruelightOps  options  postCoreHoudiniInstall  postCoreImageInstall  postCoreInstall  postCoreMayaInstall  postCoreSceneInstall  releaseAll  valgrindSuppressions
config/travis/: installDependencies.py
contrib/.svn/: all-wcprops  entries
contrib/IECoreAppleseed/: Changes
contrib/IECoreGL/: SConstruct
contrib/IECoreHoudini/: CMakeLists.txt  SConstruct
contrib/IECoreMaya/: SConstruct
contrib/TeamCity/: pom.xml
contrib/cmake/: CMakeLists.txt  README.md  buildCortexWindows.bat  install_cmakelists.bat
contrib/cmake/cmake/: FindBlosc.cmake  FindUSD.cmake
contrib/scripts/: buildCompileCommands.py  convertSceneC++.py  fixIncludes.py
doc/.svn/: all-wcprops  dir-prop-base  entries
doc/config/: Doxyfile  Doxyfile.in  footer.html  header.html
doc/html/: AddSmoothSkinningInfluencesOp_8h_source.html  AlphaTexture_8h_source.html  AngleConversion_8h.html  AngleConversion_8h_source.html  AssociatedLegendre_8h_source.html  AttributeBlock_8h_source.html  AttributeCache_8h_source.html  AttributeState_8h_source.html  BGEOParticleReader_8h_source.html  BINMeshReader_8h_source.html  BINParticleWriter_8h_source.html  BezierAlgo_8h.html  BezierAlgo_8h_source.html  BinaryFrameList_8h_source.html  Bindable_8h_source.html  BlindDataHolder_8h_source.html  BlobbyImplicitSurfaceFunction_8h_source.html  BoundedKDTree_8h_source.html  Box3Manipulator_8h_source.html  Box3ParameterHandler_8h_source.html  BoxAlgo_8h.html  BoxAlgo_8h_source.html  BoxOps_8h.html  BoxOps_8h_source.html  BoxParameterHandler_8h_source.html  BoxPrimitive_8h_source.html  BoxTraits_8h_source.html  ByteOrder_8h_source.html  CINImageReader_8h_source.html  CINImageWriter_8h_source.html  CSGImplicitSurfaceFunction_8h_source.html  CacheSet_8h_source.html  CachedImplicitSurfaceFunction_8h_source.html  CachedReader_8h_source.html  CallbackId_8h_source.html  CamelCase_8h_source.html  CameraController_8h_source.html  Camera_8h_source.html  CapturingRenderer_8h_source.html  ChannelOp_8h_source.html  (+1906 more)
glsl/: ieConstant.frag  ieConstant.vert  ieMarschnerHair.frag
glsl/.svn/: all-wcprops  entries
glsl/IECoreGL/: ColorAlgo.h  CurvesPrimitive.h  Diffuse.h  FilterAlgo.h  FragmentShader.h  Light.h  Lights.h  MatrixAlgo.h  PointsPrimitive.h  Specular.h  VecAlgo.h  VertexShader.h
graphics/.svn/: all-wcprops  entries
icons/.svn/: all-wcprops  entries
icons/IECoreMaya/: ie_actionIcon_grey.xpm  ie_editTextIcon.xpm
include/: ieHoudini.h  ieMantra.h
include/.svn/: all-wcprops  entries
include/IECore/: AddSmoothSkinningInfluencesOp.h  AlexaLogcToLinearDataConversion.h  AlexaLogcToLinearDataConversion.inl  AlexaLogcToLinearOp.h  AngleConversion.h  AssociatedLegendre.h  AssociatedLegendre.inl  AttributeBlock.h  AttributeCache.h  AttributeState.h  BGEOParticleReader.h  BINMeshReader.h  BINParticleWriter.h  BezierAlgo.h  BezierAlgo.inl  BinaryFrameList.h  BlindDataHolder.h  BlobbyImplicitSurfaceFunction.h  BlobbyImplicitSurfaceFunction.inl  BoundedKDTree.h  BoundedKDTree.inl  BoxAlgo.h  BoxAlgo.inl  BoxInterpolator.inl  BoxOperators.h  BoxOperators.inl  BoxOps.h  BoxOps.inl  BoxTraits.h  ByteOrder.h  CINImageReader.h  CINImageWriter.h  CSGImplicitSurfaceFunction.h  CSGImplicitSurfaceFunction.inl  CachedImplicitSurfaceFunction.h  CachedImplicitSurfaceFunction.inl  CachedReader.h  CamelCase.h  CamelCase.inl  Camera.h  (+495 more)
include/IECoreGL/: AlphaTexture.h  Bindable.h  BoxPrimitive.h  GL.h  (+63 more)
mel/: rmanOutputIEProcedural.mel
msvc/: readme.txt
scripts/: do  do.in
src/: AttributeCache.cpp  BoxOperators.cpp  CINImageReader.cpp  CINImageWriter.cpp  CachedReader.cpp  Camera.cpp  DPXImageReader.cpp  DPXImageWriter.cpp  Data.cpp  DirNameParameter.cpp  EXRImageReader.cpp  FileIndexedIO.cpp  FileNameParameter.cpp  HeaderGenerator.cpp  HierarchicalCache.cpp  IECore.cpp  IndexedIOInterface.cpp  IndexedIOPath.cpp  InterpolatedCache.cpp  JPEGImageWriter.cpp  MemoryStream.cpp  ModifyOp.cpp  Object.cpp  ObjectInterpolator.cpp  ObjectParameter.cpp  ObjectReader.cpp  ObjectWriter.cpp  Op.cpp  Parameter.cpp  PathParameter.cpp  PointDensitiesOp.cpp  PointNormalsOp.cpp  PreWorldRenderable.cpp  Primitive.cpp  PrimitiveOp.cpp  Reader.cpp  Renderable.cpp  Renderer.cpp  SQLiteIndexedIO.cpp  SimpleTypedData.cpp  (+8 more)
test/: All.py  AttributeCache.py  BlindDataHolder.py  BoolVectorData.py  BoostFilesystemPaths.py  BoostUnitTestTest.h  BoundedKDTree.py  CINReader.py  Camera.py  ClassLoader.py  CompoundData.py  ContextualClassLoader.py  DPXReader.py  EXRReader.py  FileExaminer.py  FileFormatSwitch.py  FileSequence.py  FileSequenceParameter.py  GenericImageTest.py  GlobbedClassLoader.py  Group.py  HeaderGenerator.py  HierarchicalCache.py  IECoreTest.cpp  Imath.py  IndexedIO.py  IndexedIOTest.cpp  IndexedIOTest.h  InterpolatedCache.py  InterpolatorTest.cpp  KDTree.py  KDTreeTest.h  MemoryUsage.py  MeshPrimitive.py  MotionPrimitive.py  NamespacePollution.py  OBJReaderTest.py  Object.py  ObjectIO.py  ObjectInterpolation.py  (+24 more)
trunk/: LICENSE  SConstruct
(+7646 files in other folders)
